--- a/homeassistant/components/radiotherm/translations/en.json
+++ b/homeassistant/components/radiotherm/translations/en.json
@@ -19,6 +19,12 @@
             }
         }
     },
+    "issues": {
+        "deprecated_yaml": {
+            "description": "Configuring the Radio Thermostat climate platform using YAML is deprecated and will be removed in Home Assistant 2022.9; Your existing configuration has been imported into the UI automatically and can be safely removed. Remove the YAML configuration from your configuration.yaml file and restart Home Assistant to fix this issue.",
+            "title": "The Radio Thermostat YAML configuration is deprecated"
+        }
+    },
     "options": {
         "step": {
             "init": {
